added some swagger docs
